<resources>
    <string name="app_name">AppCosto</string>
    <string name="titulo_menu">Menu Principal</string>
    <string name="titulo_nuevo_producto">Nuevo Producto</string>
    <string name="titulo_Modificar_producto">Modificar Producto</string>
    <string name="nombreDelProducto">Nombre del producto</string>
    <string name="marca">Marca</string>
    <string name="cantidad">Cantidad/Piezas</string>
    <string name="fotodelproducto">Foto del producto</string>
    <string name="fotodelprecio">Foto del precio</string>
    <string name="precio">Precio</string>
    <string name="descuento">¿Tiene descuento?</string>
    <string name="detallesDescuento">Especifique el tipo de descuento</string>
    <string name="Promocion">¿Tiene promoción?</string>
    <string name="destallesPromocion">Especifique la promoción</string>
    <string name="si">Sí</string>
    <string name="no">No</string>
    <string name="Tienda">Tienda</string>
    <string name="destallesTienda">Nombre de la tienda</string>
    <string name="Sucursal">Sucursal</string>
    <string name="destallesSucursal">Direccion de la sucursal</string>
    <string name="Eliminar">Eliminar</string>
    <string name="Cambiar_foto">Cambiar Foto</string>
    <string name="Aceptar">Aceptar</string>
    <string name="GuardarNuevoProducto">Guardar nuevo producto</string>
    <string name="GuardarCambios">Guardar Cambios</string>
    <string name="BorrarProduct">Borrar Producto</string>
    <string name="ConfirmacionFragmento1">Esta acción no se</string>
    <string name="ConfirmacionFragmento2">puede deshacer</string>
    <string name="ConfirmacionFragmento3">¿Quiere borrar </string>
    <string name="ConfirmacionFragmento4">este producto? </string>
    <string name="titulo_tips_ahorro">Tips de ahorro</string>
    <string name="titulografica">Evolucion del precio</string>

</resources>