<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/popup_rectangulo"
        android:layout_width="360dp"
        android:layout_height="298dp"
        android:background="@drawable/popup_rectangle"
        android:shape="rectangle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498" />

    <Button
        android:id="@+id/cancelar_borrado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:background="@drawable/border"
        android:backgroundTint="@color/boton_borrar_color"
        android:text="@string/no"
        app:layout_constraintEnd_toStartOf="@+id/aceptar_borrado"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="@+id/popup_rectangulo"
        app:layout_constraintTop_toBottomOf="@+id/texto_confirmacion4" />

    <Button
        android:id="@+id/aceptar_borrado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:background="@drawable/border"
        android:backgroundTint="@color/boton_aceptar"
        android:text="@string/si"
        app:layout_constraintEnd_toEndOf="@+id/popup_rectangulo"
        app:layout_constraintHorizontal_bias="0.772"
        app:layout_constraintStart_toStartOf="@+id/popup_rectangulo"
        app:layout_constraintTop_toBottomOf="@+id/texto_confirmacion4" />

    <TextView
        android:id="@+id/texto_confirmacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/ConfirmacionFragmento1"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/popup_rectangulo"
        app:layout_constraintStart_toStartOf="@+id/popup_rectangulo"
        app:layout_constraintTop_toTopOf="@+id/popup_rectangulo" />


    <TextView
        android:id="@+id/texto_confirmacion3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="65dp"
        android:text="@string/ConfirmacionFragmento2"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/popup_rectangulo"
        app:layout_constraintStart_toStartOf="@+id/popup_rectangulo"
        app:layout_constraintTop_toTopOf="@+id/popup_rectangulo" />

    <TextView
        android:id="@+id/texto_confirmacion2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="115dp"
        android:text="@string/ConfirmacionFragmento3"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/popup_rectangulo"
        app:layout_constraintStart_toStartOf="@+id/popup_rectangulo"
        app:layout_constraintTop_toTopOf="@+id/popup_rectangulo" />

    <TextView
        android:id="@+id/texto_confirmacion4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="160dp"
        android:text="@string/ConfirmacionFragmento4"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/popup_rectangulo"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="@+id/popup_rectangulo"
        app:layout_constraintTop_toTopOf="@+id/popup_rectangulo" />

</androidx.constraintlayout.widget.ConstraintLayout>