<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/popup_rectangulo"
        android:layout_width="360dp"
        android:layout_height="298dp"
        android:background="@drawable/popup_rectangle"
        android:shape="rectangle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498" />

    <ImageView
        android:id="@+id/foto_contenedor"
        android:layout_width="157dp"
        android:layout_height="132dp"
        android:layout_marginStart="101dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="102dp"
        android:background="@drawable/border"
        app:layout_constraintEnd_toEndOf="@+id/popup_rectangulo"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/popup_rectangulo"
        app:layout_constraintTop_toTopOf="@+id/popup_rectangulo"
        app:srcCompat="@drawable/camera_120_128" />

    <Button
        android:id="@+id/cancelar_borrado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="198dp"
        android:layout_marginBottom="52dp"
        android:background="@drawable/border"
        android:backgroundTint="@color/boton_borrar_color"
        android:text="@string/Eliminar"
        app:layout_constraintBottom_toBottomOf="@+id/popup_rectangulo"
        app:layout_constraintEnd_toEndOf="@+id/popup_rectangulo"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintStart_toStartOf="@+id/popup_rectangulo"
        app:layout_constraintTop_toTopOf="@+id/popup_rectangulo" />

    <Button
        android:id="@+id/cambiar_popup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="118dp"
        android:layout_marginTop="246dp"
        android:layout_marginEnd="118dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/border"
        android:backgroundTint="@color/boton_guardar_color"
        android:text="@string/Cambiar_foto"
        app:layout_constraintBottom_toBottomOf="@+id/popup_rectangulo"
        app:layout_constraintEnd_toEndOf="@+id/popup_rectangulo"
        app:layout_constraintStart_toStartOf="@+id/popup_rectangulo"
        app:layout_constraintTop_toTopOf="@+id/popup_rectangulo"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/aceptar_borrado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="258dp"
        android:layout_marginTop="194dp"
        android:background="@drawable/border"
        android:backgroundTint="@color/boton_aceptar"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="52dp"
        android:text="@string/Aceptar"
        app:layout_constraintBottom_toBottomOf="@+id/popup_rectangulo"
        app:layout_constraintEnd_toEndOf="@+id/popup_rectangulo"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/popup_rectangulo"
        app:layout_constraintTop_toTopOf="@+id/popup_rectangulo"
        app:layout_constraintVertical_bias="1.0" />


    <!--<ImageButton
        android:id="@+id/salir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="?android:attr/selectableItemBackground"
        app:layout_constraintEnd_toEndOf="@+id/popup_rectangulo"
        app:layout_constraintTop_toTopOf="@+id/popup_rectangulo"
        app:srcCompat="@drawable/_98889_x_icon__2_" />-->



</androidx.constraintlayout.widget.ConstraintLayout>